syntax = "proto3";

package auth;

service RolesService {
  rpc Create(CreateRequestRoles) returns (OtherResponseRole) {}
  rpc GetAll(GetAllRequestRoles) returns (GetAllResponseRoles) {}
  rpc GetItem(GetItemRequestRoles) returns (OtherResponseRole) {}
  rpc Update(UpdateRequestRoles) returns (OtherResponseRole) {}
  rpc Request(SetRequestRoles) returns (OtherResponseRole) {}
  rpc Accept(SetRequestRoles) returns (OtherResponseRole) {}

}

/*
    * request
*/
message CreateRequestRoles {
  string name = 1;
}

message GetAllRequestRoles {
  int32 page = 1;
}

message GetItemRequestRoles {
  string id = 1;
}

message UpdateRequestRoles {
  string id = 1;
  string name = 2;
}

message SetRequestRoles {
  string id = 1;
}

/*
    * response
*/
message OtherResponseRole {
  DataRoles data = 1;
}

message GetAllResponseRoles {
  LinksRoles  links = 1;
  MetaRoles  meta = 2;
  repeated DataRoles  data = 3;
}

message LinksRoles {
  string self = 1;
  string next = 2;
  string prev = 3;
  string first = 4;
  string last = 5;
}

message MetaRoles {
  int32 totalCount = 1;
}
message DataRoles {
  string type = 1;
  AttributesRoles attributes = 2;
}

message AttributesRoles {
  string message = 1;
  Role role = 2;
}

message Role {
  string id = 2;
  string name = 3;
  bool isSpecial = 4;
}
